@@ -1067,6 +1067,7 @@ void MainWindow::SetStateActionsBookView()
     UpdateUIOnTabChanges();
 
     m_FindReplace->SetCapabilities(FindReplace::CAPABILITY_FIND);
+    m_FindReplace->ShowHide();
 }
 
 void MainWindow::SetStateActionsSplitView()
@@ -1099,6 +1100,7 @@ void MainWindow::SetStateActionsSplitView()
     UpdateUIOnTabChanges();
 
     m_FindReplace->SetCapabilities(FindReplace::CAPABILITY_FIND);
+    m_FindReplace->ShowHide();
 }
 
 void MainWindow::SetStateActionsCodeView()
@@ -1131,6 +1133,7 @@ void MainWindow::SetStateActionsCodeView()
     UpdateUIOnTabChanges();
 
     m_FindReplace->SetCapabilities(FindReplace::CAPABILITY_ALL);
+    m_FindReplace->ShowHide();
 }
 
 
@@ -1170,6 +1173,7 @@ void MainWindow::SetStateActionsRawView()
         FindReplace::CAPABILITY_MODE_NORMAL |
         FindReplace::CAPABILITY_MODE_CASE_SENSITIVE |
         FindReplace::CAPABILITY_MODE_REGEX);
+    m_FindReplace->ShowHide();
 }
 
 
@@ -1203,6 +1207,7 @@ void MainWindow::SetStateActionsStaticView()
     UpdateUIOnTabChanges();
 
     m_FindReplace->SetCapabilities(FindReplace::CAPABILITY_NONE);
+    // Only hide window, don't save closed state since its temporary
     m_FindReplace->hide();
 }
 
@@ -1816,8 +1821,7 @@ void MainWindow::PlatformSpecificTweaks()
 
 void MainWindow::ExtendUI()
 {
-    // Creating the tabs and the book browser
-    m_FindReplace->hide();
+    m_FindReplace->ShowHide();
 
     // We want a nice frame around the tab manager
     QFrame *frame = new QFrame( this );
